--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     .hero-image {
       width: 100%;
       height: 300px;
-      background-image: url('personalwebsite/1592599892797.jpeg');
+      background-image: url('1592599892797.jpeg');
       background-size: cover;
       background-position: center;
       position: relative;
@@ -73,7 +73,7 @@
       bottom: -75px;
       left: 50%;
       transform: translateX(-50%);
-      background-image: url('personalwebsite/DSC_0010.JPG');
+      background-image: url('DSC_0010.JPG');
       background-size: cover;
       background-position: center;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
