--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       bottom: -75px;
       left: 50%;
       transform: translateX(-50%);
-      background-image: url('/about/DSC_0010.jpg');
+      background-image: url('/about/DSC_0010.JPG');
       background-size: cover;
       background-position: center;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
