moved noteparrot and changed button name

--- a/index.html
+++ b/index.html
@@ -254,6 +254,12 @@
           thinking. My interests lie in leveraging emerging technologies like AI and robotics to create impactful
           products that enhance lives.</p>
       </div>
+      <div class="card note-parrot-card">
+        <h3>Check out Note Parrot</h3>
+        <p>Note Parrot is a study buddy that converts your notes into practice quizzes. It's designed to help students
+          learn more effectively and efficiently.</p>
+        <p><a href="https://noteparrot.com" target="_blank">Check it out →</a></p>
+      </div>
       <div class="card">
         <h3>Education</h3>
         <p><strong>University of California, Davis</strong><br>
@@ -297,12 +303,6 @@
           <li>Led team to Worlds (2021) and U.S. Open Nationals (2022), winning 8 awards including Robot Skills Champion &
             Inspire award at Worlds</li>
         </ul>
-      </div>
-      <div class="card note-parrot-card">
-        <h3>Check out Note Parrot</h3>
-        <p>Note Parrot is a study buddy that converts your notes into practice quizzes. It's designed to help students
-          learn more effectively and efficiently.</p>
-        <p><a href="https://noteparrot.com" target="_blank">Learn more about Note Parrot →</a></p>
       </div>
         <div class="card">
           <h3>Skills</h3>
