fixed About Noteparrot"

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
           products that enhance lives.</p>
       </div>
       <div class="card note-parrot-card">
-        <h3>About Note Parrot</h3>
+        <h3>About Noteparrot</h3>
         <p>Note Parrot is a study buddy that converts your notes into practice quizzes. It's designed to help students
           learn more effectively and efficiently.</p>
         <a href="https://noteparrot.com" target="_blank" class="note-parrot-cta"><span class="cta-text">Check it out</span></a>
