fixed small things

--- a/index.html
+++ b/index.html
@@ -315,14 +315,14 @@
     <div class="card-container">
       <div class="card">
         <h3>About Me</h3>
-        <p>Hi, I'm Vrinda! I'm currently developing noteparrot, a study buddy that converts your notes into practice
-          quizzes. I'm eager to learn more about product management, blending my technical background with strategic
+        <p>Hi, I'm Vrinda! I'm currently developing Noteparrot, a study buddy that converts your notes into practice
+          quizzes for better test preparation. I'm eager to learn more about product management, blending my technical background with strategic
           thinking. My interests lie in leveraging emerging technologies like AI and robotics to create impactful
           products that enhance lives.</p>
       </div>
       <div class="card note-parrot-card">
         <h3>About Noteparrot</h3>
-        <p>Note Parrot is a study buddy that converts your notes into practice quizzes. It's designed to help students
+        <p>Noteparrot is a study buddy that converts your notes into practice quizzes. It's designed to help students
           learn more effectively and efficiently.</p>
         <a href="https://noteparrot.com" target="_blank" class="note-parrot-cta"><span class="cta-text">Check it out</span></a>
       </div>
