--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
           <p><strong>University of California, Davis</strong><br>
             Bachelor of Science - BS, Computer Science and Cognitive Science<br>
             2022 - 2026</p>
-          <p><strong>Relevant Coursework:</strong> Signals & Systems, Engineering Problem Solving, Minds Brains &
+          <p><strong>Relevant Coursework:</strong> Data Structures & Algorithms, Signals & Systems, Engineering Problem Solving, Minds Brains &
             Computers,
             Object Oriented Programming, Circuits I, Discrete Math for CS, and Symbolic Logic.</p>
         </div>
@@ -342,20 +342,39 @@
         <i class="fas fa-briefcase section-icon"></i>
         <h3>Experience</h3>
         <div class="card-content">
-          <p><strong>Product Manager (part-time)</strong> at Starspark<br>
-            June 2023 - Present</p>
+
+          <p><strong>Founder and Lead Engineer</strong> at Noteparrot<br>
+            June 2024 - Current</p>
           <ul>
-            <li>Conducting customer interviews for research</li>
-            <li>Market research and comparison</li>
-            <li>Compiling product requirements document</li>
-            <li>Leading cognitive science based research paper seminars</li>
+            <li>Tech Stack: Django, Python, Heroku-22, GPT-4o, Vertex AI API</li>
+            <li>User Base: 100+ users worldwide</li>
+            <li>Integrated GPT-4o and Gemini 1.5 Flash LLMS to leverage user notes for
+            contextually grounded question generation, reducing response hallucinations</li>
+            <li>Implemented multi-step verification improving accuracy and factuality</li>
+          </ul>
+
+          <p><strong>Machine Learning Intern</strong> at Starspark<br>
+            June 2024 - September 2024</p>
+          <ul>
+            <li>Developed backend features like a parent dashboard & problem generation</li>
+            <li>Designed and implemented a data model using Django ORM to store and
+            organize extracted mathematical tasks, questions, and solutions</li>
+            <li>Contributed to data preparation pipeline, including data labeling, cleaning,
+            and augmentation for machine learning model training</li>
           </ul>
 
           <p><strong>Product Development Intern</strong> at Teens in AI<br>
-            Jun 2024 - Present</p>
+            June 2024 - September 2024</p>
           <ul>
-            <li>Working on developing AI-driven educational Robotics pathways</li>
-            <li>Collaborating with the team to create innovative solutions for teen engagement in AI</li>
+            <li>Developed and implemented beginner and advanced robotics curricula for teenagers, fostering technical skill development and inspiring future STEM leaders.</li>
+            <li>Engineered engaging, hands-on robotics projects, promoting problem-solving, critical thinking, and collaboration skills.</li>
+            <li>Demonstrated proficiency in robotics hardware and software, empowering students to explore complex concepts and achieve their full potential.</li>
+          </ul>
+
+          <p><strong>Web Software Developer</strong> at TruthBeTold<br>
+            2020 - 2022</p>
+          <ul>
+            <li>Worked on a fact-checking system using TF 2.x & BERT-based models for semantic similarity analysis & claim verification across web-sourced data</li>
           </ul>
 
           <p><strong>Multi-Robot Pathfinding Research Intern</strong> at USC ACT Lab<br>
@@ -384,7 +403,7 @@
         <h3>Skills</h3>
         <div class="card-content">
           <p><strong>Languages:</strong> Python, C++, HTML/CSS, JavaScript</p>
-          <p><strong>Development:</strong> OpenCV, Django, React, Node.js</p>
+          <p><strong>Development:</strong> OpenCV, Django, React, Node.js, Langchain, Git, Azure, AWS & GCP</p>
           <p><strong>Machine Learning:</strong> PyTorch, TensorFlow, Reinforcement Learning, LLMs (OpenAI, Gemini)</p>
           <p><strong>UI/UX:</strong> Figma, Photoshop & Illustrator</p>
         </div>
