--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vrinda Bansal - Personal Webpage</title>
+  <link rel="icon" href="/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&family=Open+Sans:wght@300;400;600&display=swap"
@@ -398,8 +399,8 @@
           </ul>
         </div>
       </div>
-      <div class="card">
-        <i class="fas fa-cogs section-icon"></i>
+      <div class="card note-parrot-card">
+        <i class="fas fa-cogs section-icon" style="color: white;"></i>
         <h3>Skills</h3>
         <div class="card-content">
           <p><strong>Languages:</strong> Python, C++, HTML/CSS, JavaScript</p>
