repushing the skills card update

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Vrinda Bansal - Personal Webpage</title>
-  <link rel="icon" href="/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;700&family=Open+Sans:wght@300;400;600&display=swap"
@@ -211,7 +210,8 @@
     .note-parrot-cta .cta-text {
       display: inline-block;
       transition: transform 0.3s ease;
-      padding-right: 15px; /* Add padding to the right to create space */
+      padding-right: 15px;
+      /* Add padding to the right to create space */
     }
 
     .note-parrot-cta span {
@@ -223,7 +223,8 @@
       content: '→';
       position: absolute;
       top: 50%;
-      right: 15px; /* Adjust right position to create space */
+      right: 15px;
+      /* Adjust right position to create space */
       transform: translateY(-50%);
       opacity: 0;
       transition: all 0.3s ease;
@@ -237,11 +238,13 @@
     }
 
     .note-parrot-cta:hover .cta-text {
-      transform: translateX(-5px); /* Adjust the value to control the text movement */
+      transform: translateX(-5px);
+      /* Adjust the value to control the text movement */
     }
 
     .note-parrot-cta:hover::after {
-      right: 20px; /* Adjust right position to control arrow movement */
+      right: 20px;
+      /* Adjust right position to control arrow movement */
       opacity: 1;
     }
 
@@ -317,7 +320,8 @@
       <div class="card">
         <h3>About Me</h3>
         <p>Hi, I'm Vrinda! I'm currently developing Noteparrot, a study buddy that converts your notes into practice
-          quizzes for better test preparation. I'm eager to learn more about product management, blending my technical background with strategic
+          quizzes for better test preparation. I'm eager to learn more about product management, blending my technical
+          background with strategic
           thinking. My interests lie in leveraging emerging technologies like AI and robotics to create impactful
           products that enhance lives.</p>
       </div>
@@ -325,7 +329,8 @@
         <h3>About Noteparrot</h3>
         <p>Noteparrot is a study buddy that converts your notes into practice quizzes. It's designed to help students
           learn more effectively and efficiently.</p>
-        <a href="https://noteparrot.com" target="_blank" class="note-parrot-cta"><span class="cta-text">Check it out</span></a>
+        <a href="https://noteparrot.com" target="_blank" class="note-parrot-cta"><span class="cta-text">Check it
+            out</span></a>
       </div>
       <div class="card">
         <i class="fas fa-graduation-cap section-icon"></i>
@@ -334,7 +339,8 @@
           <p><strong>University of California, Davis</strong><br>
             Bachelor of Science - BS, Computer Science and Cognitive Science<br>
             2022 - 2026</p>
-          <p><strong>Relevant Coursework:</strong> Data Structures & Algorithms, Signals & Systems, Engineering Problem Solving, Minds Brains &
+          <p><strong>Relevant Coursework:</strong> Data Structures & Algorithms, Signals & Systems, Engineering Problem
+            Solving, Minds Brains &
             Computers,
             Object Oriented Programming, Circuits I, Discrete Math for CS, and Symbolic Logic.</p>
         </div>
@@ -350,7 +356,7 @@
             <li>Tech Stack: Django, Python, Heroku-22, GPT-4o, Vertex AI API</li>
             <li>User Base: 100+ users worldwide</li>
             <li>Integrated GPT-4o and Gemini 1.5 Flash LLMS to leverage user notes for
-            contextually grounded question generation, reducing response hallucinations</li>
+              contextually grounded question generation, reducing response hallucinations</li>
             <li>Implemented multi-step verification improving accuracy and factuality</li>
           </ul>
 
@@ -359,23 +365,27 @@
           <ul>
             <li>Developed backend features like a parent dashboard & problem generation</li>
             <li>Designed and implemented a data model using Django ORM to store and
-            organize extracted mathematical tasks, questions, and solutions</li>
+              organize extracted mathematical tasks, questions, and solutions</li>
             <li>Contributed to data preparation pipeline, including data labeling, cleaning,
-            and augmentation for machine learning model training</li>
+              and augmentation for machine learning model training</li>
           </ul>
 
           <p><strong>Product Development Intern</strong> at Teens in AI<br>
             June 2024 - September 2024</p>
           <ul>
-            <li>Developed and implemented beginner and advanced robotics curricula for teenagers, fostering technical skill development and inspiring future STEM leaders.</li>
-            <li>Engineered engaging, hands-on robotics projects, promoting problem-solving, critical thinking, and collaboration skills.</li>
-            <li>Demonstrated proficiency in robotics hardware and software, empowering students to explore complex concepts and achieve their full potential.</li>
+            <li>Developed and implemented beginner and advanced robotics curricula for teenagers, fostering technical
+              skill development and inspiring future STEM leaders.</li>
+            <li>Engineered engaging, hands-on robotics projects, promoting problem-solving, critical thinking, and
+              collaboration skills.</li>
+            <li>Demonstrated proficiency in robotics hardware and software, empowering students to explore complex
+              concepts and achieve their full potential.</li>
           </ul>
 
           <p><strong>Web Software Developer</strong> at TruthBeTold<br>
             2020 - 2022</p>
           <ul>
-            <li>Worked on a fact-checking system using TF 2.x & BERT-based models for semantic similarity analysis & claim verification across web-sourced data</li>
+            <li>Worked on a fact-checking system using TF 2.x & BERT-based models for semantic similarity analysis &
+              claim verification across web-sourced data</li>
           </ul>
 
           <p><strong>Multi-Robot Pathfinding Research Intern</strong> at USC ACT Lab<br>
